Finished basic PizzaService, Integration tests added, IngredientService has been started